public/styles.css
html, body {
    height: 100%;
  }
  
  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  #chat {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 2vw;
  }
  
  input {
    width: 60vw;
    border: 1px solid #ddd;
    height: 5vw;
    padding: 0 2vw;
    font-size: 1.5vw;
  }
  
  button {
    width: 60vw;
    height: 5vw;
    font-size: 1.5vw;
    background: #069;
    text-align: center;
    line-height: 5vw;
    font-weight: bold;
    color: #FFF;
    margin-top: 1vw;
    border: none;
  }
  
  .messages {
    width: 60vw;
    height: 40vw;
    margin: 2vw 0;
    border: 1px solid #ddd;
    padding: 2vw;
  }

